--- a/package.json
+++ b/package.json
@@ -3,40 +3,37 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon --exec ts-node src/server.ts",
-        "build": "tsc",
-        "start": "node dist/server.js"
+        "dev": "wrangler dev",
+        "deploy": "wrangler deploy"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@supabase/supabase-js": "^2.90.1",
         "@types/nodemailer": "^7.0.4",
         "bcrypt": "^6.0.0",
         "cloudinary": "^1.41.3",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.3",
-        "express": "^5.2.1",
+        "hono": "^4.11.3",
         "jsonwebtoken": "^9.0.3",
-        "mongoose": "^9.1.2",
         "multer": "^2.0.2",
         "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^7.0.12",
         "zod": "^4.3.5"
     },
     "devDependencies": {
+        "@cloudflare/workers-types": "^4.20260111.0",
         "@types/bcrypt": "^6.0.0",
         "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
-        "@types/express": "^5.0.6",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/multer": "^2.0.0",
         "@types/node": "^25.0.3",
-        "nodemon": "^3.1.11",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "wrangler": "^4.58.0"
     }
 }
